--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Flutter action
-      uses: subosito/flutter-action@v1.3.2
+      uses: subosito/flutter-action@master
       with:
         channel: 'dev'
     - run: flutter config --enable-web
